src/test/deca/context/valid/non_provided/empty_class.deca
// Description:
//      Déclaration d'une classe vide
//
// Resultats:
//      Ok
//
// Historique:
//    cree le 17/01/2020

class A  {

}