src/test/deca/context/invalid/non_provided/field_conflict_decl.deca
// Description:
//    Conflit de double déclaration de 
//    champs dans une classe 
//
// Resultats:
//    13:11: x already declared
// 
// Historique:
//    cree le 21/01/2020

class A {
    int x;
    string x;
}